add link to other tools, css tweaks, remove fonts

--- a/RuneLevel/index.html
+++ b/RuneLevel/index.html
@@ -27,6 +27,10 @@
 
             <p class="mainDescription">Find out the level of the player who died based on how many runes you received.</p>
 
+            <p class="mainDescription">
+                <a href="https://jerp.tv/eldenring">Other helpful Elden Ring Tools &amp; Info</a>
+            </p>
+
             <h2>I Am A:</h2>
 
             <select id="playerType">
